2004-11-07  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gtk/Gtk.metadata: Fix some TreeModelFilter stuff (similar to
	TreeModelSort).

2004-11-05  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gnomevfs/*.cs: Add copyright/LGPL header.
	* gnomevfs/*.custom: Idem.
	* gnomevfs/Mime.cs: Obsolete, replaced by MimeType.cs.
	* gnomevfs/MimeActionType.cs: Obsolete, generated now.
	* gnomevfs/OpenMode.cs: Idem.
	* gnomevfs/Result.cs: Idem.
	* gnomevfs/SeekPosition.cs: Idem.

2004-11-05  Dan Winship  <danw@novell.com>

	* parser/gapi2xml.pl (parseInitFunc, addPropElem): handle
	GtkContainer child properties

	* generator/Property.cs:
	* generator/ChildProperty.cs: make Property subclassable and add a
	"ChildProperty" subclass.

	* generator/Makefile.am (sources): add ChildProperty.cs

	* generator/ClassBase.cs: handle "childprop" nodes by creating
	ChildProperty objects.

	* glib/Value.cs (explicit operator EnumWrapper): use
	g_value_get_flags() rather than g_value_get_enum() when
	appropriate.

	* glib/glue/value.c (glibsharp_value_holds_flags): glue for that

	* gtk/gtk-api.raw: regen to pick up child properties

	* gtk/Gtk.metadata: 
	* gtk/Container.custom: hide the auto-generated
	Gtk.Container.ChildGetProperty and implement a nicer one by hand.

	* gtk/glue/container.c (gtksharp_container_child_get_property):
	utility function to set up an appropriate GValue for us

2004-11-05  Tambet Ingo  <tambet@ximian.com>

	* generator/OpaqueGen.cs: Add optional "parent" attribute to Opaque
	types.

2004-11-04  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gnomevfs/Directory.cs: Add async GetEntries Uri alias.
	* gtk/FileChooserDialog.custom: Add nice custom properties for Uris.
	ListFilters, ListShortcutFolders and ListShortcutFolderUris.
	* gtk/FileChooserWidget.custom: Idem.
	* gtk/Gtk.metadata: Idem.

2004-11-04  Todd Berman  <tberman@off.net>

	* glib/ListBase.cs: In Empty, call FreeList, not Dispose.

2004-11-04  Todd Berman  <tberman@off.net>
