@@ -1,3 +1,8 @@
+2004-11-08  Dan Winship  <danw@novell.com>
+
+	* generator/ChildProperty.cs: 
+	* generator/Property.cs: Fix child property names.
+
 2004-11-07  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* gtk/Gtk.metadata: Fix some TreeModelFilter stuff (similar to
